--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Spectrosopy software using an Ocean Optics 2000(+) spectrometer."
 readme = "README.md"
 authors = [{ name = "David Fokkema", email = "davidfokkema@icloud.com" }]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "numpy>=2.2.1",
+    "plotext>=5.3.2",
+    "pyusb>=1.3.1",
+]
 
 [project.scripts]
 ocean-optics = "ocean_optics:main"
