--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.1",
     "plotext>=5.3.2",
+    "pyqtgraph>=0.13.7",
+    "pyside6-essentials>=6.8.1.1",
     "pyusb>=1.3.1",
     "rich>=13.9.4",
     "typer>=0.15.1",
