--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = [
-    "rust-just>=1.38.0",
-]
+dev = ["mypy>=1.14.1", "rust-just>=1.38.0"]
+
+[tool.mypy]
+exclude = """(?x)(
+        ocean_optics/ui_.*.py
+    )"""
+
+[[tool.mypy.overrides]]
+module = ["usb.*", "libusb.*", "plotext.*", "pyqtgraph.*"]
+ignore_missing_imports = true
